--- a/app/views/homepage/partials/_navbar.html.erb
+++ b/app/views/homepage/partials/_navbar.html.erb
@@ -72,6 +72,11 @@
   @media only screen and (min-width: 768px) {
     .nav-buttons > a {
       padding-right: 0px;
+      padding-left: 16px;
+    }
+
+    .how {
+      display: block;
     }
 
 
