--- a/app/views/homepage/privacy_policy.erb
+++ b/app/views/homepage/privacy_policy.erb
@@ -6,20 +6,12 @@
 
 
 		<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700' rel='stylesheet' type='text/css'>
-
-		<link rel="stylesheet" href="/stylesheets/job_board.css" type="text/css" />
-
-		<link rel="stylesheet" href="/stylesheets/alert.css" type="text/css" />
-
-		<link rel="stylesheet" href="/stylesheets/fonts.css" type="text/css">
-
-		<link rel="stylesheet" href="/stylesheets/main.css" type="text/css" />
-
-
-		<link rel="stylesheet" href="/stylesheets/team.css" type="text/css" />
-
 		<link rel="stylesheet" href="/stylesheets/pure-push-pull.css" type="text/css" />
 
+		<%= stylesheet_link_tag 'team', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+
+		<%= render 'homepage/partials/navbar' %>
 
 		<style>
 			.privacy {
