--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -7,7 +7,6 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag    'homepage/index', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag "teacher-form-input" %>
     <%= stylesheet_link_tag    'main', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_include_tag 'application' %>
@@ -111,7 +110,7 @@
       <nav class="footer--nav">
         <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
           Terms &amp; Privacy </a>
-        <a class="footer--nav--link" href="case_study" target="_blank">
+        <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
           Learn More
         </a>
         <a class="footer--nav--link" href="mailto:team@readupnow.com">
