pretty sure I fixed everything

--- a/app/assets/stylesheets/alert.css
+++ b/app/assets/stylesheets/alert.css
@@ -1,7 +1,8 @@
-/*body {
+body {
     padding: 0;
 }
 
+/* Alert */
 
 #alert {
     position: relative;
@@ -13,6 +14,7 @@
     color: #f6f6f6;
     content: 'Click to dismiss';
     font: bold 12px/30px 'Proximanova';
+    font-weight: bold;
     height: 30px;
     left: 50%;
     margin-left: -60px;
@@ -81,7 +83,7 @@
             animation: alert 1s ease forwards;
 }
 
-*/
+/* Animation */
 
 @-webkit-keyframes alert {
     0% { opacity: 0; }
