--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,7 +8,7 @@ body {
 }
 
 ul b {
-	font-family: 'Proximanova'
+	font-family: 'Proximanova';
 	font-weight: bold;
 }
 
@@ -21,7 +21,7 @@ label.error {
 .the-problem .text h2, .the-product .text h2, .join-us .text h2 {
 	font-size: 24px;
 	color: #ed7a44;
-	font-family: 'Proximanova'
+	font-family: 'Proximanova';
 	font-weight: bold;
 }
 
@@ -115,8 +115,6 @@ h1 {
 	font-weight: bold;
 	margin-top: -.1em;
 	line-height: 1.3em;
-/*	color: #4a4a4a;
-*/
 	color: white;
 	text-align: center;
 	font-size: 1.7em;
@@ -145,9 +143,6 @@ h1.banner {
     font-family: 'Proximanova';
     font-weight: bold;
     color: #4a4a4a;
-
-
-
 }
 
 
