added reports interface

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -42,6 +42,11 @@ body {
   font-family: Conv_proximanova-regular-webfont;
 }
 
+#reportsInterfaceContainer {
+  height: 100%;
+  font-family: Conv_proximanova-regular-webfont;
+}
+
 p, ol, ul, td {
   font-family: Conv_proximanova-regular-webfont, verdana, arial, helvetica, sans-serif;
   font-size: 13px;
