--- a/app/views/static_pages/homepage/_signup_form.erb
+++ b/app/views/static_pages/homepage/_signup_form.erb
@@ -2,6 +2,8 @@
   <form
     id="signup-homepage"
     class="signup-form"
+    action="\users"
+    method="post"
   >
     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
@@ -65,6 +67,19 @@
               required
             >
           </div>
+
+          <div class="field">
+          <span>Password:</span>
+            <input
+              name="user[password_confirmation]"
+              autocomplete="off"
+              type="password"
+              class="input form-control"
+              pattern=".{6,}"
+              required
+            >
+          </div>
+
         </div>
         <button
           id="signup-homepage-demo-button"
@@ -178,42 +193,42 @@
   var emailRegex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
   var triggeredMobileForm = false;
 
-  function registerUser (e, form) {
-    e.preventDefault();
-    e.stopPropagation();
+  // function registerUser (e, form) {
+  //   e.preventDefault();
+  //   e.stopPropagation();
 
-    var ValidStatus = form.valid();
-    if (ValidStatus == false) {
-      // mixpanel.track('invalid name-password given', {'platform': platform});
-      return false;
-    }
+  //   var ValidStatus = form.valid();
+  //   if (ValidStatus == false) {
+  //     // mixpanel.track('invalid name-password given', {'platform': platform});
+  //     return false;
+  //   }
 
-    // TODO: fix this!!!
-    // $.ajax({
-    //   url: 'auth/user_exists',
-    //   type: 'post',
-    //   data: {
-    //     email: email
-    //   },
-    //   success: function(data) {
-    //     // a user already exists with this username/phone, so log that user in
-    //     $('#teacher-info input[name=usernameDisplay]').val(usernameDisplay);
-    //     $('#teacher-info input[name=username]').val(username);
-    //     $('#myModal').modal('toggle');
-    //   },
-    //   error: function (xhr, ajaxOptions, thrownError){
-    //       if(xhr.status==404) {
-    //         // a user doesn't exist with this phone/username
-    //         $('body').addClass('modalTransition');
-    //         $('#signupNamePassword').modal('toggle');
-    //           // alert(thrownError);
-    //       }
-    //   }
+  //   // TODO: fix this!!!
+  //   // $.ajax({
+  //   //   url: 'auth/user_exists',
+  //   //   type: 'post',
+  //   //   data: {
+  //   //     email: email
+  //   //   },
+  //   //   success: function(data) {
+  //   //     // a user already exists with this username/phone, so log that user in
+  //   //     $('#teacher-info input[name=usernameDisplay]').val(usernameDisplay);
+  //   //     $('#teacher-info input[name=username]').val(username);
+  //   //     $('#myModal').modal('toggle');
+  //   //   },
+  //   //   error: function (xhr, ajaxOptions, thrownError){
+  //   //       if(xhr.status==404) {
+  //   //         // a user doesn't exist with this phone/username
+  //   //         $('body').addClass('modalTransition');
+  //   //         $('#signupNamePassword').modal('toggle');
+  //   //           // alert(thrownError);
+  //   //       }
+  //   //   }
 
-    // });
+  //   // });
 
-    createUserAndDemoStuff(form.serialize())
-  }
+  //   createUserAndDemoStuff(form.serialize())
+  // }
 
 
   function revealRestOfForm(form) {
@@ -229,41 +244,41 @@
     triggeredMobileForm = true;
   }
 
-  function createUserAndDemoStuff (formData) {
-    var spinner = $('.spinner')
-    spinner.fadeIn();
-    $.ajax({
-      url: '/users',
-      type: 'post',
-      dataType: "json",
-      data: formData,
+  // function createUserAndDemoStuff (formData) {
+  //   var spinner = $('.spinner')
+  //   spinner.fadeIn();
+  //   $.ajax({
+  //     url: '/users',
+  //     type: 'post',
+  //     dataType: "json",
+  //     data: formData,
 
-    }).done(function (d) {
+  //   }).done(function (d) {
 
-      var classroomData = {
-        user_id: d.id,
-        user_name: d.name,
-        authenticity_token: $("form#signup-homepage #authenticity_token").val(),
-      }
+  //     var classroomData = {
+  //       user_id: d.id,
+  //       user_name: d.name,
+  //       authenticity_token: $("form#signup-homepage #authenticity_token").val(),
+  //     }
 
-      $.ajax({
-        url: '/auth/create_demo_classroom',
-        type: 'post',
-        dataType: "json",
-        data: classroomData,
-      }).done(function() {
-        if (isMobileDevice()) {
-          window.location.replace("/mobile_halt");
-        } else {
-          window.location.replace("/student_dashboard/#/story/demo");
-        }
-      }).fail(function(xhr, status, err) {
-        console.log(err)
-      })
+  //     $.ajax({
+  //       url: '/auth/create_demo_classroom',
+  //       type: 'post',
+  //       dataType: "json",
+  //       data: classroomData,
+  //     }).done(function() {
+  //       if (isMobileDevice()) {
+  //         window.location.replace("/mobile_halt");
+  //       } else {
+  //         window.location.replace("/student_dashboard/#/story/demo");
+  //       }
+  //     }).fail(function(xhr, status, err) {
+  //       console.log(err)
+  //     })
 
-    }).always(function() { spinner.fadeOut() })
+  //   }).always(function() { spinner.fadeOut() })
 
-  };
+  // };
 
 
 
@@ -305,24 +320,19 @@
     });
 
 
-    $('#signup-homepage-demo-button').click(function(e) {
-      registerUser(e, signupForm);
-    });
-
-
     // handle enter button
-    $('#signup-homepage').on('keypress', function(e) {
-      var keyCode = e.keyCode || e.which;
-      if (keyCode === 13) {
-        e.preventDefault();
+    // $('#signup-homepage').on('keypress', function(e) {
+    //   var keyCode = e.keyCode || e.which;
+    //   if (keyCode === 13) {
+    //     e.preventDefault();
 
-        if (triggeredMobileForm) {
-          registerUser(e, signupForm);
-        } else {
-          revealRestOfForm(signupForm);
-        }
-      }
-    });
+    //     if (triggeredMobileForm) {
+    //       registerUser(e, signupForm);
+    //     } else {
+    //       revealRestOfForm(signupForm);
+    //     }
+    //   }
+    // });
 
 
     $('form#signup-homepage #suh').on('focus', function(e) {
