update fonts and some style

--- a/client/src/StudentDashboard/overlays/DemoSubmittedOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/DemoSubmittedOverlay/styles.css
@@ -20,7 +20,7 @@
 	text-align: center;
 	/*opacity: 0.95;*/
 	flex: 1;
-	
+
 }
 
 .images {
@@ -40,13 +40,14 @@
 	position: absolute;
 	top: 20px;
 	/* yes this is very hacky but it's just for the demo and it works as long as the screen isn't super super narrow */
-	right: 194px; 
+	right: 194px;
 }
 
 .title {
 	font-size: 2.3em;
 	font-weight: bold;
-	font-family: 'Conv_proximanova-bold-webfont';
+	font-family: 'Proximanova';
+	font-weight: bold;
 }
 
 .subtitle {
