--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -24,10 +24,9 @@
 }
 
 .studentNameHeading {
-	font-family: 'Conv_proximanova-bold-webfont';
+	font-family: 'Proximanova';
 	font-weight: bold;
 	font-size: 1.9em;
-	
 }
 
 .bookInfoSubheading {
@@ -55,12 +54,13 @@
 
 .metricFigureLabel {
 	color: green;
-	font-family: 'Conv_proximanova-bold-webfont';
+	font-family: 'Proximanova';
+	font-weight: bold;
 	font-size: 1.8em;
 }
 
 .metricDescriptionLabel {
-	font-family: 'Conv_Proxima-Nova-Semibold';
+	font-family: 'Proximanova Semibold';
 	font-size: 1.3em;
 	margin-top: 10px;
 }
@@ -76,7 +76,7 @@
 .levelRectangle {
 	background-color: green;
 	color: white;
-	font-family: 'Conv_Proxima-Nova-Semibold';
+	font-family: 'Proximanova Semibold';
 	font-size: 1.4em;
 	width: 140px;
 	padding: 8px;
@@ -86,7 +86,6 @@
 
 .levelLabel {
 	margin-top: 7px;
-	/*font-family: 'Conv_Proxima-Nova-Semibold';*/
 	font-size: 1.2em;
 }
 
@@ -104,7 +103,7 @@
 }
 
 .bookInfoTitle {
-	font-family: 'Conv_proximanova-bold-webfont';
+	font-family: 'Proximanova';
 	font-weight: bold;
 	font-size: 1.6em;
 }
