--- a/client/src/TranscriberInterface/styles.css
+++ b/client/src/TranscriberInterface/styles.css
@@ -7,7 +7,7 @@
 }
 
 .nameHeading {
-	font-family: 'Conv_proximanova-bold-webfont';
+	font-family: 'Proximanova';
 	font-weight: bold;
 	font-size: 1.9em;
 }
@@ -33,7 +33,7 @@
 }
 
 .bookTitleHeading {
-	font-family: 'Conv_proximanova-bold-webfont';
+	font-family: 'Proximanova';
 	font-weight: bold;
 	font-size: 1.5em;
 }
