--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -94,7 +94,7 @@
    }
 
    &#support-families {
-     background-color: #676487
+     background-color: white;
    }
 
    &#better-teachers {
@@ -152,7 +152,7 @@
    font-size: 1em;
    font-family: 'Proximanova';
    font-weight: bold;
-   text-align: center;
+   text-align: left;
    margin-top: 1em;
    margin-bottom: 4em;
 
@@ -238,6 +238,8 @@
 
 }
 
+ // I am confused by the below as well
+
  // aubrey: i believe this comment was left by the previous coder. I find it confusing. idk.
 
  // previous coder:
@@ -247,7 +249,7 @@
  @media (min-width: 35.5em) { // 568px
    .splash-new .splash-container {
        max-width: 1445px;
-       min-height: 720px; // 720px
+       min-height: 720px; // 720px <-- 720px
        display: block;
        margin: 0 auto;
        .title {
@@ -282,7 +284,7 @@
  }
 
 
- @media (min-width: 35em) { // 5XX px
+ @media (min-width: 35.5em) { // 5XX px
 
    p {
      font-size: 1.12em;
@@ -321,7 +323,7 @@
      }
 
      &#support-families {
-       background-color: #676487;
+       background-color: white;
        .pure-g {
          width: 100%;
        }
@@ -448,7 +450,7 @@
      }
 
      &#support-families {
-       background-color: #676487;
+       background-color: white;;
        .pure-g {
          width: 85%;
        }
@@ -508,7 +510,7 @@
      font-family: 'Proximanova';
      font-weight: bold;
      text-align: left;
-     margin-top: 6em;
+     margin-top: 10px;
 
      ul {
        list-style-type: none;
@@ -568,7 +570,7 @@
      }
 
      &#support-families {
-       background-color: #676487;
+       background-color: white;
        .pure-g {
          width: 70%;
        }
@@ -628,7 +630,7 @@
      font-family: 'Proximanova';
      font-weight: bold;
      text-align: left;
-     margin-top: 6em;
+     margin-top: 10px;
 
      ul {
        list-style-type: none;
