--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -142,6 +142,11 @@
     .step-number-label-left {
       right: -30px;
     }
+
+    #demoButton2 {
+      display: block;
+      margin: 0 auto;
+    }
   }
 
   
@@ -253,7 +258,7 @@
           <p><b>Save hours</b> of administering, grading, and documenting</p>
           <p><b>See Weaknesses</b> to know what each students needs</p>
           <p><b>Show parents</b> to share student growth and success</p>
-          <button type="button" class="btn btn-success" style="width: 150px; height: 50px; margin-top: 30px; text-align: center; font-size: 1.1em; display: block" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
+          <button type="button" class="btn btn-success" id="demoButton2" style="width: 150px; height: 50px; margin-top: 30px; text-align: center; font-size: 1.1em; display: block" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
         </ul>
       </div>
     </div>
