lang, visual tweaks to homepage

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -76,6 +76,11 @@
     font-size: 0.5em;
     margin-top: 20px;
     font-weight: 100;
+    color: white;
+  }
+
+  .how-it-works:hover {
+    color:#e2e2e2;
   }
 
   .step-number-label-left {
@@ -167,21 +172,21 @@
           center
           top/cover
           no-repeat
-          #3C8FCA;"
+          #726241;"
   >
     <div class="title">
       <div id="pitch" class="form-container">
         <h1>
-          ReadUp grades running records for you.
+          ReadUp scores running records for you
         </h1>
         <center>
           <h4 id="sub-pitch">
-            ReadUp listens and grades reading so you can spend your time teaching.
+            ReadUp listens to students read and creates a full running record 
           </h4>
         </center>
         <button type="button" class="btn btn-primary" id="hero-button" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
 
-        <div class="how-it-works">HOW IT WORKS <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/down-arrow.png" style="margin-top: -3px;"></div>
+        <a href="#end-no-reading"><div class="how-it-works">HOW IT WORKS <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/down-arrow.png" style="margin-top: -3px;"></div></a>
         
       </div>
     </div>
