--- a/app/assets/stylesheets/homepage/_product-sections.scss
+++ b/app/assets/stylesheets/homepage/_product-sections.scss
@@ -228,11 +228,11 @@
 
   // have a different resized background on mobile
   div.splash-container {
-  background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/student-hero-mobile.jpg')
+  background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero-mobile.jpg')
           center
           top/cover
           no-repeat
-          #3C8FCA !important;
+          #726241 !important;
   }
 
 
