--- a/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
+++ b/client/src/StudentDashboard/modals/subcomponents/ButtonArray/styles.css
@@ -20,15 +20,29 @@
 }
 
 .buttonImage {
-	width: 70px;
-	height: 70px;
+	width: 60px;
+	height: 60px;
+	margin: 10px;
+}
+
+.largeButtonImage {
+	width: 80px;
+	height: 80px;
 	margin: 10px;
 }
 
 .buttonText {
 	font-weight: bold;
 	font-style: italic;
-	font-size: 1.2em;
+	font-size: 1.1em;
+	margin: 10px;
+	font-family: 'Proximanova Semibold';
+}
+
+.largeButtonText {
+	font-weight: bold;
+	font-style: italic;
+	font-size: 1.3em;
 	margin: 10px;
 	font-family: 'Proximanova Semibold';
 }
