--- a/app/views/homepage/modals/_signup_form_modal.erb
+++ b/app/views/homepage/modals/_signup_form_modal.erb
@@ -6,7 +6,7 @@
     <div class="modal-content" style="background-color: #FAFBFC;">
 
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h2 class="modal-signup-heading">See ReadUp for yourself</h2>
       </div>
       
 
