moved smooth scroll to the footer

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -261,8 +261,8 @@
         <h2>Know where your students are – instantly</h2>
         <ul style="margin: 0;">
           <p><b>Save hours</b> of administering, grading, and documenting</p>
-          <p><b>See Weaknesses</b> to know what each students needs</p>
-          <p><b>Show parents</b> to share student growth and success</p>
+          <p><b>Stop disruptions.</b> No more leaving your class unsupervised</p>
+          <p><b>See weaknesses</b> to know what each students needs</p>
           <button type="button" class="btn btn-success" id="demoButton2" style="width: 150px; height: 50px; margin-top: 30px; text-align: center; font-size: 1.1em; display: block" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
         </ul>
       </div>
