--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -123,6 +123,12 @@
       font-size: 27px;
       padding-top: 45px;
     }
+
+    h4#sub-pitch {
+      width: 100%;
+      font-size: 17px;
+    }
+
     .product-text {
       margin-top: 20px;
     }
@@ -181,8 +187,8 @@
         </h1>
         <center>
           <h4 id="sub-pitch">
-            ReadUp listens to students read and creates a full running record 
-          </h4>
+            ReadUp listens to students read and creates a full running record with fluency, accuracy, comprehension, and miscue analysis. 
+           </h4>
         </center>
         <button type="button" class="btn btn-primary" id="hero-button" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
 
