--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Birdup</title>
+
+  <!-- Maybe be repeating this code from _headers.erb  -->
+<title>ReadUp | Running records scored for you</title>
+<meta name="description" content="ReadUp listens to elementary students read and creates a full running record for you with miscue analysis, accuracy, fluency rate, and comprehension.">
+  <!-- END Maybe be repeating this code from _headers.erb  -->
 
     <%= csrf_meta_tags %>
 
