--- a/app/views/homepage/components/_headers.erb
+++ b/app/views/homepage/components/_headers.erb
@@ -1,4 +1,4 @@
-<title>ReadUp | Running records done for you</title>
+<title>ReadUp | Running records scored for you</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
