--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -70,6 +70,10 @@
     font-size: 0.8em;
     display: block;
     font-family: 'Proximanova Semibold';
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
   }
 
   .how-it-works {
@@ -272,7 +276,7 @@
 <div class="splash-new">
   <div
     class="splash-container"
-    style="background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero-desktop.jpg')
+    style="background: url('/images/student-hero-blue.jpg')
           center
           top/cover
           no-repeat
@@ -288,9 +292,8 @@
             ReadUp listens to students read and creates a full running record with fluency, accuracy, comprehension, and miscue analysis 
            </h4>
         </center>
-        <button type="button" class="btn btn-primary" id="hero-button" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
 
-        <a href="#end-no-reading"><div class="how-it-works">HOW IT WORKS <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/down-arrow.png" style="margin-top: -3px;"></div></a>
+        <a href="/student_dashboard/#/story/demo" id="hero-button">> Try a Demo</a>
         
       </div>
     </div>
@@ -301,103 +304,43 @@
 
 <div class='section-buffer'></div>
 
-<section class="product-display" id="end-no-reading">
-  <h1 class="section-banner">Save hundreds of instructional hours</h1>
-  <div class="pure-g">
 
-    <div class="pure-u-1 pure-push-md-1-2 pure-u-md-1-2">
-      <div class="product-img">
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/step-1.jpg" alt="">
+<section style="margin-top: 2em; margin-bottom: 2em; margin-left: 6em; margin-right:6em;">
+  <div class="pure-g" style="padding-top: 3em;">
+
+    <div class="pure-u-1-5">
+      <div>
+        <img src="/images/district-1.png" alt="">
       </div>
     </div>
 
-
-    <div class="pure-u-1 pure-pull-md-1-2 pure-u-md-1-2">
-      <div class="product-text" style="position: relative;">
-        <div class='step-number-label-left'>01</div>
-        <h2>Students read on their own</h2>
-        <ul>
-          <p>F&amp;P-leveled books that are chosen by Yale professors </p>
-          <p>Readup records their reading</p>
-        </ul>
+    <div class="pure-u-1-5">
+      <div>
+        <img src="/images/district-2.png" alt="">
       </div>
     </div>
 
+    <div class="pure-u-1-5">
+      <div>
+        <img src="/images/district-3.png" alt="">
+      </div>
+    </div>
+
+    <div class="pure-u-1-5">
+      <div>
+        <img src="/images/district-4.png" alt="">
+      </div>
+    </div>
+
+    <div class="pure-u-1-5">
+      <div>
+        <img src="/images/district-5.png" alt="">
+      </div>
+    </div>
 
   </div>
 </section>
 
 
-<section class="product-display" id="support-families">
-  <div class="pure-g step-2">
 
-    <div class="pure-u-1 pure-u-md-1-2">
-      <div class="product-img">
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/step-2.jpg" alt="">
-      </div>
-    </div>
-
-    <div class="pure-u-1 pure-u-md-1-2">
-      <div class="product-text" style="position: relative;">
-        <div class='step-number-label-right'>02</div>
-        <h2 >You get a running record</h2>
-        <ul>
-          <p>Scored by a trained teacher</p>
-          <p>Emailed to you in under 1 hour</p>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="product-display skew-up" id="support-families" style="margin-top: 2em; background-color: #EDF2F5;">
-  <div class="pure-g skew-down-container" style="padding-top: 3em;">
-
-    <div class="pure-u-1 pure-push-md-1-2 pure-u-md-1-2">
-      <div class="product-img">
-        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/running-record-report-large.jpg" alt="">
-      </div>
-    </div>
-
-
-    <div class="pure-u-1 pure-pull-md-1-2 pure-u-md-1-2">
-      <div class="product-text">
-        <h2>Know where your students are – instantly</h2>
-        <ul style="margin: 0;">
-          <p><b>Save hours</b> of administering, grading, and documenting</p>
-          <p><b>Stop disruptions.</b> No more leaving your class unsupervised</p>
-          <p><b>See weaknesses</b> to know what each students needs</p>
-          <button type="button" class="btn btn-success" id="demoButton2" style="width: 150px; height: 50px; margin-top: 30px; text-align: center; font-size: 1.1em; display: block" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
-        </ul>
-      </div>
-    </div>
-
-
-  </div>
-</section>
-
-
-<section class="product-display extra-padding" id="testimonial"> 
-  <div class="content--max--width">
-    <img  class="quote-image" src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/testimonial-photo.jpg">
-    <div class="quote-content-left"> 
-      <div class="quote-content">
-        <h3 class="quote-title">The best service is one that does not require our teachers to worry or stress, and ReadUp provides this for Loma Park.</h3>
-        <p>Maria Contreras, Loma Park Elementary</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<div id="get-started" style="padding: 20px; padding-top: 50px; padding-bottom: 70px; background-color: #3E8EC8; color: white;">
-
-  <h1 id="call-to-action" style="color: white;">Ready to get started with Readup?</h1>
-
-  <p>Join thousands of educators that trust Readup to save instructional time</p>
-
-
-  <button type="button" class="btn btn-success" style="width: 150px; height: 50px; margin: 0 auto; text-align: center; font-size: 1.1em; display: block" data-toggle="modal" data-target="#signupFormModal">Try a Demo</button>
-
-</div>
 
