More homepage changes

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -1,4 +1,20 @@
 <style type="text/css">
+
+
+ .homepageTitlePg {
+      color: white;
+      padding-top: 8em;
+      margin: 0 auto;
+      width: 90%;
+      font-size: 1.5em;
+      font-family: 'Proximanova';
+      font-weight: bold;
+      line-height: 1.42857143;
+      height: 50%;
+
+    }
+
+
   .form-container {
     position: absolute;
     margin: 0 auto;
@@ -66,7 +82,6 @@
     width: 150px;
     height: 50px;
     margin: 0 auto;
-    text-align: center;
     font-size: 0.8em;
     display: block;
     font-family: 'Proximanova Semibold';
@@ -200,7 +215,7 @@
     h4#sub-pitch {
       width: 100%;
       font-size: 17px;
-    }
+      }
 
     .product-text {
       margin-top: 20px;
@@ -282,19 +297,30 @@
           no-repeat
           #726241;"
   >
-    <div class="title">
-      <div id="pitch" class="form-container">
+    <div class="homepageTitlePg">
+    <div class="pure-g">
+      <div id="pitch" class="pure-u-2-3">
         <h1>
-          ReadUp scores running records for you
+          The easiest way to assess fluency and comprehension
         </h1>
-        <center>
+
           <h4 id="sub-pitch">
-            ReadUp listens to students read and creates a full running record with fluency, accuracy, comprehension, and miscue analysis 
+            ReadUp listens to students read and then our teachers score a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
            </h4>
-        </center>
 
         <a href="/student_dashboard/#/story/demo" id="hero-button">> Try a Demo</a>
-        
+      </div>
+
+      <div class="pure-u-1-3">
+
+        <img src="/images/ipad-product.png" alt="">
+      </div>
+
+
+
+
+      </div>
+      </div>
       </div>
     </div>
   </div>
