finished changes for homepage for large screen devises

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -81,7 +81,6 @@
   #hero-button {
     width: 150px;
     height: 50px;
-    margin: 0 auto;
     font-size: 0.8em;
     display: block;
     font-family: 'Proximanova Semibold';
@@ -277,7 +276,16 @@
 
   }
 
-  
+  @media (min-width: 35.5em) {
+    .splash-new .splash-container h4 {
+      text-align: left;
+    }
+    .splash-new .splash-container h1 {
+      text-align: left;
+    }
+  }
+
+
 </style>
 
 
@@ -307,7 +315,6 @@
           <h4 id="sub-pitch">
             ReadUp listens to students read and then our teachers score a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
            </h4>
-
         <a href="/student_dashboard/#/story/demo" id="hero-button">> Try a Demo</a>
       </div>
 
