--- a/app/assets/stylesheets/fonts.css
+++ b/app/assets/stylesheets/fonts.css
@@ -39,6 +39,14 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Conv_proxima-nova-bold-italic';
+    src: url('fonts/proxima-nova-bold-italic.eot');
+    src: local('☺'), url('fonts/proxima-nova-bold-italic.woff') format('woff'), url('fonts/proxima-nova-bold-italic.ttf') format('truetype'), url('fonts/proxima-nova-bold-italic.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 
 
