--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -1,6 +1,7 @@
 
-.reportsContainer {
 
+.reportsContainer {
+	color: #4a4a4a;
 }
 
 .navBar {
@@ -19,8 +20,18 @@
 
 
 .contentWrapper {
-	padding: 70px;
+	padding: 70px 110px;
+	padding-right: 35px;
+	max-width: 1025px;
+/*	margin: 0 auto;
+*/
+}
 
+@media (max-width: 1100px) {
+	.contentWrapper {
+/*		padding: 70px 70px;
+*/
+	}
 }
 
 .evaluationInfoHeader {
@@ -35,21 +46,29 @@
 .studentNameHeading {
 	font-family: 'Conv_proximanova-bold-webfont';
 	font-weight: bold;
-	font-size: 1.9em;
+	font-size: 2.5em;
 	
 }
 
-.bookInfoSubheading {
-	font-size: 1.2em;
+.bookInfoSubheading p{
+	font-size: 1.4em;
 	font-style: italic;
-	margin-top: 10px;
+	margin-top: 15px;
 }
+
+.bookInfoSubheading span {
+	font-family: 'Conv_proxima-nova-bold-italic';
+	color: #4a4a4a;
+}
+
 
 .metricsHeadingContainer {
 	flex: 1;
 	display: flex;
 	flex-flow: row;
 	justify-content: flex-end;
+	margin-top: 19px; 
+	/*This aligns it with bottom of Student Heading.*/
 }
 
 .metricWrapper {
@@ -57,7 +76,7 @@
 	flex-flow: column;
 	align-items: center;
 	justify-content: center;
-	padding: 10px;
+	padding: 6px;
 	margin-left: 15px;
 	margin-right: 15px;
 }
@@ -65,13 +84,12 @@
 .metricFigureLabel {
 	color: green;
 	font-family: 'Conv_proximanova-bold-webfont';
-	font-size: 1.8em;
+	font-size: 1.9em;
 }
 
 .metricDescriptionLabel {
 	font-family: 'Conv_Proxima-Nova-Semibold';
 	font-size: 1.3em;
-	margin-top: 10px;
 }
 
 .levelInfoWrapper {
@@ -79,7 +97,8 @@
 	flex-flow: column;
 	align-items: center;
 	justify-content: center;
-	margin-left: 50px;
+	margin-left: 30px;
+	margin-top: -5px;
 }
 
 .levelRectangle {
@@ -88,14 +107,14 @@
 	font-family: 'Conv_Proxima-Nova-Semibold';
 	font-size: 1.4em;
 	width: 140px;
-	padding: 8px;
+	padding: 5px;
 	text-align: center;
 	border-radius: 5px;
 }
 
 .levelLabel {
-	margin-top: 7px;
-	/*font-family: 'Conv_Proxima-Nova-Semibold';*/
+	margin-top: 10px;
+	font-family: 'Conv_Proxima-Nova-Semibold';
 	font-size: 1.2em;
 }
 
