--- a/client/src/ReportsInterface/styles.css
+++ b/client/src/ReportsInterface/styles.css
@@ -77,10 +77,23 @@
 }
 
 .metricFigureLabel {
-	color: #249C44;
 	font-family: 'Conv_proximanova-bold-webfont';
 	font-size: 1.9em;
 }
+
+.goodMetric {
+	color: #249C44;
+}
+
+.fairMetric {
+	color: #D97F0F;
+}
+
+.poorMetric { 
+	color: #982e2b;
+}
+
+
 
 .metricDescriptionLabel {
 	font-family: 'Conv_Proxima-Nova-Semibold';
@@ -106,6 +119,22 @@
 	text-align: center;
 	border-radius: 5px;
 }
+
+
+
+.goodLevelResult {
+	background-color: #249C44;
+}
+
+.fairLevelResult {
+	background-color: #D97F0F;
+}
+
+.poorLevelResult {
+	background-color: #982e2b;
+}
+
+
 
 .levelLabel {
 	margin-top: 10px;
@@ -168,14 +197,14 @@
 	font-family: 'Conv_proximanova-bold-webfont';
 	font-weight: bold;
 	font-size: 1.6em;
-	text-align: left;
+	text-align: center;
 	margin-bottom: 20px;
 }
 
 .pricingFooterButton {
     width: 170px;
     height: 50px;
-    margin-left: 60px;
+    margin: 0 auto;
     display: block;
     border-radius: 3px;
     background-color: #2e6da4;
